--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: c(
     person("Suah", "Kim", , "snk23@calvin,edu", role = "cre"),
     person("Sherise", "Immanuela", "sei4@calvin.edu", role = "aut"),
-    person("Sharon", "Velpula", "sv44@calvin.edu", role = "fnd"))
+    person("Sharon", "Velpula", "sv44@calvin.edu", role = "aut"))
 Description: This R package allows us to run a loop function that rounds the numbers
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
